--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "midtrans-client": "^1.3.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.3",
-    "natural": "^7.1.0"
+    "natural": "^7.1.0",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
